--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -27,6 +27,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 100px;
     margin: 20px;
 }
 
@@ -46,12 +47,29 @@ header {
 }
 
 .main-content {
-    margin-top: 150px;
+    margin-top: 150px; 
+}
+
+.content {
+    display: flex;
+    align-items: flex-start;
+    padding: 40px 325px 40px 20px;
+    position: relative;
+}
+
+.row-content {
+    display: flex;
+    flex-direction: row;
+}
+
+.column-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 section {
     width: 100%;
-    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -75,24 +93,178 @@ section h1 {
     z-index: 1;
 }
 
-section p {
-    color: #283042;
-    margin-left: 20px;
-    background: green;
-    margin-bottom: 10%;
+.box-rightimg {
+    min-height: 50%;
+    width: fit-content;
+    justify-self: left;
+    flex: 1;
+    position: relative;
 }
 
-/* #workshops {
-    display: flex;
-    flex-direction: column;
-    height: 400vh;
-} */
+.box-upperimg {
+    min-height: 50%;
+    width: fit-content;
+    flex: 1;
+    justify-self: center;
+    position: relative;
+    margin-top: 0;
+}
 
-/* #resultaten {
+.box-leftimg {
+    min-height: 50%;
+    width: fit-content;
+    flex: 1;
+    justify-self: right;
+    position: relative;
+    margin-top: 0;
+}
+
+.box-lowerimg {
+    min-height: 50%;
+    width: fit-content;
+    flex: 1;
+    position: relative;
+    justify-self: center;
+    margin-top: 0;
+}
+
+.box-rightimg h6,
+.box-rightimg p {
+    padding-right: 50px
+}
+
+.box-leftimg h6,
+.box-leftimg p {
+    padding-left: 50px;
+}
+
+.box-upperimg h6 {
+    padding-top: 10px;
+}
+
+.box-lowerimg p {
+    padding-bottom: 10px;
+}
+
+h6 {
     display: flex;
+    background: #EAC59D;
+    margin: 5px;
     flex-direction: column;
-    height: 400vh;
-} */
+    text-align: center;
+    text-shadow: 0 10px 4px rgba(0, 0, 0, 0.25);  
+}
+
+p {
+    display: flex;
+    color: black;
+    font-size: small;
+    font-weight: 500;
+    background: #EAC59D;
+}
+
+img {
+    border-radius: 25px;
+    box-shadow: 0 10px 4px rgba(0, 0, 0, 0.25);
+    object-fit: cover;
+    z-index: 1;
+    background: #d9d9d9;
+    position: absolute;
+    margin: 0 !important;
+}
+
+.box-rightimg img, 
+.box-rightimg video,
+.box-rightimg iframe {
+    position: absolute;
+    right: 0;
+    transform: translateX(85%) translateY(-20%);
+}
+
+.box-upperimg img,
+.box-upperimg video,
+.box-upperimg iframe {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+    z-index: 1;
+    background: #d9d9d9;
+    box-shadow: 0 10px 4px rgba(0, 0, 0, 0.25);
+    position: absolute;
+    transform: translateY(-99%) translate(-50%);
+    left: 50%;
+}
+
+.box-leftimg img,
+.box-leftimg video,
+.box-leftimg iframe {
+    position: absolute;
+    left: 0;
+    transform: translateX(-85%) translateY(-20%);
+}
+
+.box-lowerimg img,
+.box-lowerimg video,
+.box-lowerimg iframe {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+    z-index: 1;
+    background: #d9d9d9;
+    box-shadow: 0 10px 4px rgba(0, 0, 0, 0.25);
+    position: absolute;
+    transform: translateY(99%) translate(-50%);
+    bottom: 5%;
+    left: 50%;
+}
+
+.highlighted {
+    font-weight: bold;
+}
+
+.box-rightimg .small-box {
+    background: #d9d9d9;
+    width: 300px;
+    height: fit-content;
+    top: 250px;
+    right: 0;
+    position: absolute;
+    margin: 0 !important;
+    transform: translateX(80%);
+    border-radius: 25px;
+    box-shadow: 0 10px 4px rgba(0, 0, 0, 0.25);
+    z-index: 1;
+}
+
+.box-rightimg .small-box p {
+    background: #d9d9d9;
+    color: black;
+    font-size: small;
+    font-weight: 700;
+    margin: 10px;
+}
+
+.box-onlytext {
+    min-height: fit-content;
+    min-width: auto;
+    align-items: flex-start;
+    justify-self: left;
+}
+
+.box-rightimg,
+.box-upperimg,
+.box-leftimg,
+.box-lowerimg,
+.box-onlytext {
+    flex: 1;
+    position: relative;
+    padding: 20px;
+    background: #EAC59D;
+    box-shadow: 0 10px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 25px;
+}
 
 section section {
     width: 100%;
@@ -119,27 +291,88 @@ section section h3{
 .logo {
     color: #fff;
     background: #A1717E;
-    font-size: xx-large;
+    font-size: large;
     font-weight: 800;
     text-decoration: none;
 }
 
-header nav {
+header .menu {
     display: flex;
     gap: 10px;
     background: #A1717E;
 }
 
-header nav a{
+header .menu-icon {
+    cursor: pointer;
+    display: inline-block;
+    padding: 28px 20px;
+    position: relative;
+    user-select: none;
+}
+
+header .menu-icon .navicon{
+    background: #A1717E;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background .2s ease-out;
+    width: 18px;
+}
+
+header .menu-icon .navicon::before,
+header .menu-icon .navicon::after{
+    background: #A1717E;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+header .menu-icon .navicon::before{
+    top: 5px;
+}
+
+header .main-icon .navicon::after{
+    top: -5px;
+}
+
+header .menu-btn{
+    display: none;
+}
+
+header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon{
+    background: transparent;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon::before{
+    transform: rotate(-45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon::after{
+    transform: rotate(45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon::before,
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon::after{
+    top: 0;
+}
+
+header .menu a{
     text-decoration: none;
     padding: 12px 20px;
     color: #6d4a53;
     background: #A1717E;
-    font-size: large;
+    font-size:small;
     font-weight: 500;
 }
 
-header nav a.active {
+header .menu a.active {
     font-weight: 700;
     color: #fff;
 }
@@ -193,4 +426,48 @@ header nav a.active {
 .sidenav .sub-level li a.active {
     font-weight: normal;
     color: #fff;
+}
+
+@media (max-width: 89em) {
+    .row-content{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .box-upperimg {
+        min-height: 50%;
+        width: 100%;
+        flex: 1;
+        position: relative;
+    }
+
+}
+
+@media (min-width: 57em) {
+    .logo {
+        font-size: xx-large;
+    }
+    
+    header li {
+        float: left;
+    }
+
+    header li a {
+        padding: 20px 30px;
+    }
+    
+    header .menu {
+        clear: none;
+        float: right;
+        max-height: none;
+    }
+
+    header .menu a{
+        font-size: large;
+    }
+
+    header .menu-icon{
+        display: none;
+    }
 }
