--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,39 @@ img {
     padding-top: 40px;
 }
 
+.small-sidebox #weather {
+    font-size: small;
+    color: black;
+    background-color: inherit;
+    padding: 5px;
+    border-radius: 25px;
+    padding-top: 25px;
+}
+
+.small-sidebox #weather p{
+    width: 100%;
+    text-align: center;
+}
+
+#NASA-api {
+    border-radius: 25px;
+    box-shadow: 0 10px 4px rgba(0, 0, 0, 0.25);
+    object-fit: cover;
+    z-index: 1;
+    background: #d9d9d9;
+    position: absolute;
+    margin: 0 !important;
+    position: absolute;
+    right: 0;
+    transform: translateX(85%) translateY(-110%);
+}
+
+#media-section img,
+#media-section iframe {
+    width: 100%;
+    height: 100%;
+}
+
 .box-rightimg img, 
 .box-rightimg video,
 .box-rightimg iframe,
