--- a/css/style.css
+++ b/css/style.css
@@ -246,12 +246,34 @@ img {
     position: absolute;
     right: 0;
     transform: translateX(85%) translateY(-110%);
+    overflow: hidden;
 }
 
-#media-section img,
-#media-section iframe {
+#NASA-api #nasa-title {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    color: white;
+    background: rgba(0, 0, 0, 0.5);
+    margin: 0;
+    padding: 5px;
+    box-sizing: border-box;
+    font-size: 12px;
+    text-align: center;
+}
+
+.image-div,
+.video-div {
     width: 100%;
     height: 100%;
+    position: relative;
+}
+
+#nasa-image_of_the_day,
+#nasa-videoLink {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .box-rightimg img, 
@@ -462,6 +484,11 @@ th {
     border-radius: 25px;
     text-align: left;
 }
+
+#API-box {
+    min-height: 500px;
+}
+
 
 section section {
     width: 100%;
