--- a/css/style.css
+++ b/css/style.css
@@ -131,13 +131,15 @@ section h1 {
 
 .box-rightimg h6,
 .box-rightimg p,
-.box-rightimg table {
+.box-rightimg table,
+.box-api p {
     padding-right: 50px
 }
 
 .box-leftimg h6,
 .box-leftimg p,
-.box-leftimg table{
+.box-leftimg table,
+.box-api p {
     padding-left: 50px;
 }
 
@@ -233,33 +235,47 @@ img {
 .small-sidebox #weather p{
     width: 100%;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
 }
 
-#NASA-api {
+.box-api {
+    width: fit-content;
+    justify-self: left;
+    flex: 1;
+    position: relative;
+    padding: 20px;
+    background: #EAC59D;
+    box-shadow: 0 10px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 25px;
+    text-align: left;
+    height: 10000px;
+}
+
+.box-api #NASA-api {
+    position: absolute;
+    left: 0;
+    top: 0;
     border-radius: 25px;
     box-shadow: 0 10px 4px rgba(0, 0, 0, 0.25);
-    object-fit: cover;
-    z-index: 1;
     background: #d9d9d9;
-    position: absolute;
-    margin: 0 !important;
-    position: absolute;
-    right: 0;
-    transform: translateX(85%) translateY(-110%);
     overflow: hidden;
+    transform: translateX(-65%) translateY(10%);
 }
 
-#NASA-api #nasa-title {
+#nasa-title {
     position: absolute;
     top: 0;
-    width: 100%;
-    color: white;
+    left: 0;
+    right: 0;
     background: rgba(0, 0, 0, 0.5);
+    color: white;
     margin: 0;
     padding: 5px;
-    box-sizing: border-box;
     font-size: 12px;
     text-align: center;
+    z-index: 3;
 }
 
 .image-div,
@@ -267,12 +283,13 @@ img {
     width: 100%;
     height: 100%;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #nasa-image_of_the_day,
 #nasa-videoLink {
-    width: 100%;
-    height: 100%;
     object-fit: cover;
 }
 
@@ -281,7 +298,8 @@ img {
 .box-rightimg iframe,
 .box-rightimg object,
 .box-rightimg embed,
-.box-rightimg .small-sidebox {
+.box-rightimg .small-sidebox,
+.box-api .small-sidebox {
     position: absolute;
     right: 0;
     transform: translateX(85%) translateY(-20%);
@@ -484,11 +502,6 @@ th {
     border-radius: 25px;
     text-align: left;
 }
-
-#API-box {
-    min-height: 500px;
-}
-
 
 section section {
     width: 100%;
