--- a/css/style.css
+++ b/css/style.css
@@ -410,6 +410,19 @@ section section h3 {
     z-index: 1;
 }
 
+section section h4 {
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #EAC59D;
+    color: black;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    margin: 0;
+    z-index: 1;
+}
+
 .logo {
     color: #fff;
     background: #A1717E;
@@ -533,11 +546,18 @@ header .menu a.active {
     background: #283042;
 }
 
-.sidenav .sub-level li {
+.sidenav .sub-level .sub-sub-level {
+    padding-left: 30px;
+    background: #283042;
+}
+
+.sidenav .sub-level li,
+.sidenav .sub-level .sub-sub-level li {
     margin-bottom: 1px;
 }
 
-.sidenav .sub-level li a {
+.sidenav .sub-level li a,
+.sidenav .sub-level .sub-sub-level li a{ 
     color: #7A8CB2;
     text-decoration: none;
     margin: 1px 0;
@@ -545,7 +565,8 @@ header .menu a.active {
     font-style: italic;
 }
 
-.sidenav .sub-level li a.active {
+.sidenav .sub-level li a.active,
+.sidenav .sub-level .sub-sub-level li a.active{
     font-weight: normal;
     color: #fff;
 }
